added mixing mode for client creation
