# database/models/tables/client.py
@@ -26,7 +26,9 @@ class Client(TableBase):
     video_protocol = Column(String(128))
 
     tuio_sink_port = Column(Integer, default=-1)
+
+    mixing_mode = Column(String(32), default="other", nullable=False)
   
     def __repr__(self):
-        return "<ImageFile uuid=%s name=%s created_datetime=%s ip=%s video_src_port=%s video_sink_port=%s video_protocol=%s tuio_sink_port=%s>" % (
-            self.uuid, self.name, str(self.created_datetime), self.ip, str(self.video_src_port), str(self.video_sink_port), self.video_protocol, str(self.tuio_sink_port))
+        return "<Client id=%s uuid=%s name=%s created_datetime=%s ip=%s video_src_port=%s video_sink_port=%s video_protocol=%s tuio_sink_port=%s mixing_mode=%s>" % (
+            self.id, self.uuid, self.name, str(self.created_datetime), self.ip, str(self.video_src_port), str(self.video_sink_port), self.video_protocol, str(self.tuio_sink_port), self.mixing_mode)
